--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,12 @@
 body {
   text-align: center;
   padding: 2rem;
+  background-color: rgb(10,10,10);
+  color: rgb(250,250,250);
+}
+
+a {
+  color: inherit;
 }
 
 #canvas {
@@ -13,15 +19,36 @@ body {
   font-size: 3rem;
 }
 
+.subtitle {
+  font-size: 2.5rem;
+}
+
 .questions {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  margin-left: 15%;
+  margin-right: 15%;
+}
+
+.rules {
+  font-size: 1.75rem;
+  margin-left: 20%;
+  margin-right: 20%;
+}
+
+.list {
+  text-align: justify;
 }
 
 .options {
-  font-size: 2.5rem;
+  font-size: 1.7rem;
   text-align: start;
   padding-left: 30%;
+}
+
+h3 {
+  margin-left: 20%;
+  margin-right: 20%;
 }
 
 p {
@@ -29,24 +56,25 @@ p {
 }
 
 input[type="radio"] {
-  transform: scale(2);
+  transform: scale(1);
 }
 
 button {
   margin: 2rem 0;
-  font-size: 2rem;
+  font-size: 1.5rem;
   display: inline-block;
   padding: 0.8rem 1.5rem;
-  border: 0.1em solid rgb(34, 16, 16);
+  border: 0.1em solid rgb(150, 150, 150);
   border-radius: 0.12em;
   font-weight: 300;
-  color: rgb(59, 34, 34);
+  color: rgb(255, 255, 255);
+  background-color: rgb(0, 0, 0);
   transition: all 0.2s;
 }
 
 button:hover {
-  color: rgb(255, 255, 255);
-  background-color: rgb(59, 34, 34);
+  color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
 }
 
 canvas {
